# songwhip-bot-cpp

./: CMakeLists.txt  README.md  main.cpp
songwhip_lib/: songwhip.cpp
songwhip_lib/exceptions/: Exception.cpp  SongwhipException.cpp
songwhip_lib/models/: Artist.cpp  Link.cpp  RequestResult.cpp
songwhip_lib/utils/: DateTime.cpp
